samples/_failures_safe/1761617539_1def0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1522b276.c: In function ‘main’:
./samples/SAFE/__tmp_1522b276.c:148:29: error: missing terminating " character
  148 |             fprintf(stderr, "Invalid edge
      |                             ^~~~~~~~~~~~~
./samples/SAFE/__tmp_1522b276.c:148:13: error: expected expression at end of input
  148 |             fprintf(stderr, "Invalid edge
      |             ^~~~~~~
./samples/SAFE/__tmp_1522b276.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1522b276.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1522b276.c:148:13: error: expected declaration or statement at end of input
